<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/farm5"
    >

    <TextView
        android:id="@+id/mTvUser"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="475dp"
        android:gravity="center"
        android:text="@string/create_new_user"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/mBtnReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/mEdtCon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:padding="8dp"
        android:gravity="center"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/mEdtPass"
        app:layout_constraintTop_toBottomOf="@+id/mEdtPass" />

    <EditText
        android:id="@+id/mEdtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="34dp"
        android:ems="10"
        android:gravity="center"
        android:padding="8dp"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/mEdtName"
        app:layout_constraintTop_toBottomOf="@+id/mEdtName" />


    <EditText
        android:id="@+id/mEdtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_full_names"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/mEdtPass"
        app:layout_constraintStart_toStartOf="@+id/mEdtPass"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/mEdtPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="36dp"
        android:ems="10"
        android:gravity="center"
        android:padding="8dp"
        android:hint="@string/enter_phone_number"
        android:inputType="phone"
        android:minHeight="48dp"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/mEdtPass"
        app:layout_constraintStart_toStartOf="@+id/mEdtPass" />

    <EditText
        android:id="@+id/mEdtPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="305dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/mBtnReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="44dp"
        android:text="@string/register"
        app:layout_constraintBottom_toTopOf="@+id/mTvLogin"
        app:layout_constraintEnd_toEndOf="@+id/mTvLogin"
        app:layout_constraintTop_toBottomOf="@+id/mTvUser" />

    <TextView
        android:id="@+id/mTvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="65dp"
        android:text="@string/already_have_an_account_log_in"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mBtnReg" />
</androidx.constraintlayout.widget.ConstraintLayout>